@@ -24,7 +24,7 @@ import java.util.Set;
 import java.util.concurrent.Delayed;
 import java.util.concurrent.TimeUnit;
 import org.structr.core.entity.AbstractNode;
-import org.structr.core.entity.User;
+import org.structr.core.entity.Principal;
 
 /**
  * Use this interface for tasks that convert a given node into another
@@ -34,11 +34,11 @@ import org.structr.core.entity.User;
  */
 public class ConversionTask implements Task {
 
-    private User user;
+    private Principal user;
     private AbstractNode sourceNode;
     private Class targetNodeClass;
 
-    public ConversionTask(final User user, final AbstractNode sourceNode, final Class targetNodeClass) {
+    public ConversionTask(final Principal user, final AbstractNode sourceNode, final Class targetNodeClass) {
         this.user = user;
         this.sourceNode = sourceNode;
         this.targetNodeClass = targetNodeClass;
@@ -50,12 +50,12 @@ public class ConversionTask implements Task {
     }
 
     /**
-     * User to process this task as
+     * Principal to process this task as
      *
      * @return
      */
     @Override
-    public User getUser() {
+    public Principal getUser() {
         return user;
     }
 
@@ -104,8 +104,8 @@ public class ConversionTask implements Task {
 
     @Override
     public int compareTo(Delayed o) {
-        Long d1 = new Long(this.getDelay(TimeUnit.MILLISECONDS));
-        Long d2 = new Long(o.getDelay(TimeUnit.MILLISECONDS));
+        Long d1 = Long.valueOf(this.getDelay(TimeUnit.MILLISECONDS));
+        Long d2 = Long.valueOf(o.getDelay(TimeUnit.MILLISECONDS));
 
         return (d1.compareTo(d2));
     }
